# rubiks-cube-checker

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
src/rubiks_cube_checker/: cube.py  math.py
tests/: conftest.py  test_do_move.py  test_equality.py  test_initialization.py  test_is_solveable.py  test_rotate.py
