[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rubiks-cube-checker"
description = "Python package to check if a Rubik's cube assembly is solvable"
authors = [
    {name="Nadav Weiss", email="naweiss@g.jct.ac.il"},
]
dynamic = ["version"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python=">=3.7"
keywords=["rubiks", "cube", "checker"]
dependencies = [
    "numpy>=1.13",
]

[project.urls]
"Homepage" = "https://github.com/naweiss/rubiks-cube-checker"

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "rubiks_cube_checker.__version__"}

[tool.ruff]
target-version = "py37"
# Increase the maximum line length to 120 characters.
line-length = 120
src = ["src"]

[tool.mypy]
python_version = "3.7"
strict = true
allow_any_generics = true
exclude = [
    'build'  # Confuses mypy
]