[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rubiks-cube-checker"
description = "Python package to check if a Rubik's cube assembly is solvable"
authors = [
    {name="Nadav Weiss", email="naweiss@g.jct.ac.il"},
]
dynamic = ["version"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python=">=3.8"
keywords=["rubiks", "cube", "checker"]
dependencies = [
    "numpy>=1.22",  # fully supports type annotation
]

[project.urls]
"Homepage" = "https://github.com/naweiss/rubiks-cube-checker"

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "rubiks_cube_checker.__version__"}

[tool.ruff]
target-version = "py38"
# Increase the maximum line length to 120 characters.
line-length = 120
src = ["src"]
select = ["ALL"]
ignore = [
    "Q",  # ignore qouting errors
    "D",  # allow no docstrings
    "UP",  # suggest type annotatoins that does not support Python3.7
    "EXE",  # allow no Shebang
    "ANN101",  # no need to type annotate self
    "ANN102",  # no need to type annotate cls
    "EM",  # allow complex Exception messages
    "TRY003",  # no need for custom execption classes
]
[tool.ruff.per-file-ignores]
"tests/*" = [
    "S101",  # allow use of assert
    "INP001",  # tests directory is not part of the package and should not have __init__.py
    "S311",  # no need for pseudo-random generator suitable for cryptographic purposes
]

[tool.mypy]
python_version = "3.8"
strict = true
allow_any_generics = true
exclude = [
    'build'  # Confuses mypy
]
